--- a/hebrew_classical.dict.yaml
+++ b/hebrew_classical.dict.yaml
@@ -1,122 +1,128 @@
-﻿# Rime dictionary
+# Rime dictionary
 # encoding: utf-8
 #
-# hebrew by polyhedron
+# hebrew_classical
 #
-# 使用說明
-# 
 # Author:
-#  - polyhedron	<biopolyhedron@gmail.com>
-#  - 2015.03.12
+# - mksinicus <marcuszhonggh@foxmail.com>
 #
-# 版權歸作者所有
+# 暂未加入声调附标
+#
+# 受到以下项目启发：
+# - polyhedron 的 rime-hebrew (https://github.com/biopolyhedron/rime-hebrew)
+# - Hongwei Zhang 的 SemKey (https://www.researchgate.net/publication/330501972)
+#
+# 分发遵循“无许可证”（The Unlicense）
 #
 
 ---
-name: hebrew
-version: "poly2015.03.12"
+name: hebrew_classical
+version: "0.1"
 sort: original
 ...
 
-֑	X
-֒	X
-֓	X
-֔	X
-֕	X
-֖	X
-֗	X
-֘	X
-֙	X
-֚	X
-֛	X
-֜	X
-֝	X
-֞	X
-֟	X
-֠	X
-֡	X
-֢	X
-֣	X
-֤	X
-֥	X
-֦	X
-֧	X
-֨	X
-֩	X
-֪	X
-֫	X'
-֬	X
-֭	X
-֮	X
-֯	X
-ְ	x
-ֱ	ex
-ֲ	ax
-ֳ	ox
-ִ	i
-ֵ	ee
-ֶ	e
+## vowels
+# singles
 ַ	a
-ָ	aa
-ֹ	oo
-ֺ	Xw
-וֺ	ow
-וֺ	oow
+ָ	a-
+ָ	o
+ִ	i
+ִ	i-
+ֵ	e-
+ֶ	e
+ֹ	o-
+# HOLAM HASER FOR VAV, for rainy days
+ֺ	o-w
 ֻ	u
-וּ	uw
-ּ	Xh
-ֽ	X
-־	X
-ֿ	X
-׀	X
-ׁ	Xsh
-ׂ	Xlh
-׃	X
-ׄ	X
-ׅ	X
-׆	Xn
-ׇ	o
-א	''
-א	'
-ב	v
+ֻ	u-
+# y-mater
+ָי	a^
+ָי	i^
+ָי	e^
+ָי	e^.
+# w-mater
+וֺ	o^
+וּ	u^
+# h-mater: omitted
+# ḥāṭēp̄
+ֱ	e(
+ֲ	a(
+ֳ	o(
+# Schwa
+ְ	e,
+
+## consonants
+# diacritic dāḡēš/mappîq
+ּ	-h
+
+א	a]
 בּ	b
-ג	gh
+בּ	bb
+ב	b-
 גּ	g
-ג׳	gj
-ד	dh
+גּ	gg
+ג	g-
+# ג׳	gj
 דּ	d
+דּ	dd
+ד	d-
 ה	h
-ה	'h
+# ה	'h
 ו	w
 ז	z
-ז׳	zh
-ז׳	zj
-ח	H
-ט	T
+זּ	zz
+# ז׳	zh
+# ז׳	zj
+ח	h.
+ט	t.
+טּ	t.t.
 י	y
-ך	kh'
-כ	kh
+יּ	yy
+ך	k-;
+כ	k-
 כּ	k
+כּ	kk
 ל	l
-ם	m'
+לּ	ll
+ם	m;
 מ	m
-ן	n'
+מּ	mm
+ן	n;
 נ	n
+נּ	nn
 ס	s
-ע	`
-ף	f'
-פ	f
+סּ	ss
+ע	a[
+ף	p-;
+פ	p-
 פּ	p
-ץ	c'
-צ	c
-צ׳	cj
-צ׳	ch
+פּ	pp
+ץ	s.'
+צ	s.
+צּ	s.s.
+# צ׳	cj
+# צ׳	ch
 ק	q
+קּ	qq
 ר	r
-ש	sh
-שׁ	shh
-שׂ	lh
-ת	th
+# ש	sh
+# we use combining forms
+שׁ	s'
+שּׁ	s's'
+שׂ	s,
+שּׂ	s,s,
+# or use precomposed letters, but they are in the 'presentation forms' block
+# and are therefore not supposed to be used independently.
+# שׂ	s'
+# שּׂ	s's'
+# שׁ	s,
+# שּׁ	s,s,
 תּ	t
-׳	j
-״	jj
+תּ	tt
+ת	t-
+# ׳	j
+# ״	jj
+
+## misc
+# "holam haser for vav"
+וֺ	wo-
