Add placeholder dotted circle

--- a/hebrew_classical.dict.yaml
+++ b/hebrew_classical.dict.yaml
@@ -128,6 +128,8 @@ sort: original
 ־	=
 ׃	:
 
-## misc
+## misc, may subject to change
 # "holam haser for vav"
 וֺ	wo-
+# placeholder dotted circle, inspired by polyhedron's devanagari schema
+◌	ooo
